@@ -1,3 +1,6 @@
+- ADD: TME now shows ToolTips for the filenames in
+       each view to make it easier to see the
+       full path. (Stefan)
 - BUG: Log messages could be shown with an additional
        empty line between the normal lines. (Stefan)
 - BUG: The filepaths in the log messages were
